2008-10-17  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Don't include the AADL sheet any more

2008-10-16  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Small updates for the new build system
	
2008-10-15  Hans Breuer  <hans@breuer.org>

	* INSTALL : updated minimal version requirements (the real thing still
	in configure.in

	* app/find-and-replace.c : consistent line ends

2008-10-12  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Small updates to sync makefile with compilation guide

2008-10-12  Hans Breuer  <hans@breuer.org>

	* objects/UML/actor.c objects/UML/class.[ch]
	  objects/UML/class_dialog.c objects/UML/large_package.c
	  objects/UML/note.c objects/UML/object.c
	  objects/UML/small_package.c objects/UML/usecase.c : configurable
	line-width for UML elements, patch from Pablo Gra\~na

2008-09-20  Hans Breuer  <hans@breuer.org>

	* app/filedlg.c : global usage of GTK_DISABLE_DEPRECATED broke
	this file with gtk+-2-14

	* app/prefernces.c : avoid setting uninitialized (NULL) units, 
	fixes a crash when starting with an old configuation file

	* lib/text.c : also accept GDK_KP_Enter to ccreate a new line. 
	Fixes bug #539476

	* lib/makefile.msc : reflect renaming of libdia.c to dialib.c

	* NEWS : mention Find&Replace feature

	* plug-ins/python/autolayoutforce.py : more comment

	* samples/render-test.dia samples/Self/PyDiaObjects.dia : update

2008-08-10  Hans Breuer  <hans@breuer.org>

	* app/prefernces.c : don't call pref_set_*_unit with NULL

	* objects/custom/custom_object.c : add user configurable text padding
	and properly consider it during bounding box calculation. Additionally
	<svg:text/> elements (fixed text parts) are finally tinted and scaled 
	with the rest of the shape
	
	* configure.in : one more step to build bindings on Linux
	* lib/libdia.[hc] : renamed to dialib.[hc] to avoid confusion with 
	libdia.la (libdia.lo)
	* lib/Makefile.am app/app_procs.c bindings/dia-extra.cpp