@@ -1,3 +1,8 @@
+2008-10-17  Hans Breuer  <hans@breuer.org>
+
+	* plug-ins/dxf/dxf-import.c : bulge was calculated against the wrong
+	vertices, now it at least does not produce huge errors. See bug #556547
+
 2008-10-17  Steffen Macke <sdteffen@sdteffen.de>
 
 	* installer/win32/dia.nsi: Don't include the AADL sheet any more
